# azure-openai-embedding-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
